# MedMNIST_Metrics_Bench

./: README.md  onecodefile.py  pyproject.toml  requirements-optional.txt  requirements.txt
configs/: default.yaml
medmnist_bench/data/: loader.py
medmnist_bench/dr/: tsne_umap.py
medmnist_bench/eval/: cv.py
medmnist_bench/models/: classifiers.py
medmnist_bench/utils/: io.py  log.py  seed.py
medmnist_bench/viz/: plotting.py
scripts/: prepare_medmnist.py  run_all.sh
src/medmnist_bench/: cli.py
